--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "expo": "~52.0.40",
-    "expo-env": "file:../expo-env-1.0.0.tgz",
+    "expo-env": "1.0.0",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7"
